@startuml Software_de_Loja_Repositorios_Tesouraria
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classHeaderBackgroundColor #EEEDFE
skinparam classBorderColor #534AB7
skinparam classBackgroundColor #FAFAFA
skinparam arrowColor #534AB7
skinparam stereotypeCBackgroundColor #E1F5EE
skinparam stereotypeABackgroundColor #FAC775
skinparam stereotypeIBackgroundColor #D1ECF1
skinparam packageBackgroundColor #F8F8F8
skinparam packageBorderColor #B4B2A9
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 50

title Software de Loja — Repositório (Módulo: Tesouraria e Caixa)

package "Repositório (Interfaces - Tesouraria e Caixa)" #FFF0E0 {
  interface SessaoCaixaRepositorio {
    + guardar(sessao : SessaoCaixa) : void
    + atualizar(sessao : SessaoCaixa) : void
    + buscarSessaoAtiva(idUtilizador : int) : SessaoCaixa
    + buscarPendentes() : List<SessaoCaixa>
  }

  interface FechoDiaRepositorio {
    + guardar(fecho : FechoDia) : void
    + atualizar(fecho : FechoDia) : void
    + buscarUltimoConfirmado() : FechoDia
    + buscarPendentes() : List<FechoDia>
  }
}

package "Repositório (Implementações - Tesouraria e Caixa)" #FFF8EE {

  class SessaoCaixaRepositorioImpl {
    - conexao : Connection
    + guardar(sessao : SessaoCaixa) : void
    + atualizar(sessao : SessaoCaixa) : void
    + buscarSessaoAtiva(idUtilizador : int) : SessaoCaixa
    + buscarPendentes() : List<SessaoCaixa>
    - guardarSangria(sangria : Sangria) : void
  }

  class FechoDiaRepositorioImpl {
    - conexao : Connection
    + guardar(fecho : FechoDia) : void
    + atualizar(fecho : FechoDia) : void
    + buscarUltimoConfirmado() : FechoDia
    + buscarPendentes() : List<FechoDia>
  }
}

SessaoCaixaRepositorioImpl ..|> SessaoCaixaRepositorio
FechoDiaRepositorioImpl ..|> FechoDiaRepositorio

@enduml
